k3s/apps/fastchat/ingress.yaml
## fastchat ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-fastchat
  namespace: apps
  annotations:
    ingressClassName: traefik
spec:
  rules:
    - host: fastchat.kunalvirwal.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-fastchat
                port:
                  number: 80
